--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,37 +1,3 @@
-@media screen and (min-width: 768px) {
-    .modal-window {
-        max-width: 450px;
-        top: 50%;
-        left: 50%;
-    }
-
-    .sign-input {
-        min-width: 65%;
-    }
-
-    .modal-creation {
-        margin-left: 10px;
-        justify-content: flex-start;
-    }
-}
-
-@media screen and (max-width: 576px) {
-    .modal-window {
-        max-width: 350px;
-        top: 50%;
-        left: 50%;
-    }
-
-    .sign-input {
-        min-width: 65%;
-    }
-
-    .modal-creation {
-        margin-left: 10px;
-        justify-content: flex-start;
-    }
-}
-
 @font-face {
     font-family: 'Quick';
     src: url('../fonts/Quick.ttf') format('OpenType'),
@@ -43,7 +9,15 @@
 @font-face {
     font-family: 'Locomotype';
     src: url('../fonts/Locomotype  GigaSansLight.otf') format('OpenType'),
-    url('../fonts/Locomotype  GigaSansRegular.otf') format('OpenType');
+    url('../fonts/Locomotype  GigaSansRegular.otf') format('OpenType'),
+    url('../fonts/Locomotype  GigaSansBold.otf') format('OpenType');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Locomotype-bold';
+    src: url('../fonts/Locomotype  GigaSansBold.otf') format('OpenType');
     font-weight: 600;
     font-style: normal;
 }
@@ -52,18 +26,13 @@ body {
     font-family: 'Quick';
 }
 
-.home-page-main-section {
-    margin: 20px;
-}
 
-h1 {
-    margin-top: 20px;
+h2 {
     text-align: center;
     color: #483826;
 }
 
 /*modal windows*/
-
 
 
 .registration-title, .authentication-title {
@@ -175,20 +144,21 @@ h1 {
     justify-content: flex-end;
 }
 
-.row {
+.home-page-main-section {
+    margin: 5px;
     display: flex;
     justify-content: space-evenly;
-    height: 410px;
 }
 
 .col {
     flex: 1 1 auto;
     min-height: 100%;
-    max-width: 350px;
+    max-width: 280px;
     margin: 0 auto;
     padding: 10px;
     border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
+    height: 410px;
 }
 
 .col {
@@ -197,7 +167,7 @@ h1 {
 
 .card {
     height: 300px;
-    max-width: 350px;
+    max-width: 280px;
     margin: auto;
 }
 
@@ -209,7 +179,7 @@ h1 {
 
 .card-body {
     text-align: center;
-    width: 18rem;
+    max-width: 280px;
     margin: 0;
 }
 
@@ -217,22 +187,83 @@ h1 {
     font-family: 'Locomotype';
 }
 
-.user-p {
+
+/* Aside */
+
+article {
     display: flex;
-    flex-flow: wrap column;
-    justify-content: flex-start;
-    align-items: baseline;
-    width: 90%;
-    height: 300px;
-    margin: auto;
+    flex-direction: row;
+    width: 100%;
 }
 
-.user-p > h1 {
-    align-self: center;
+.events-container {
+    padding: 15px;
+    width: 70%;
+    min-height: 900px;
 }
 
-.user-p > h2 {
-    padding: 10px;
+/*aside {*/
+/*    background: #f0f0f0;*/
+/*    padding: 10px;*/
+/*    width: 200px;*/
+/*    float: right;*/
+/*}*/
+
+
+@media screen and (max-width: 980px) {
+    .modal-window {
+        max-width: 450px;
+        top: 50%;
+        left: 50%;
+    }
+
+    .sign-input {
+        min-width: 65%;
+    }
+
+    .sign-container {
+        justify-content: center;
+        margin: 15px;
+    }
 }
 
+@media screen and (max-width: 768px) {
+    .modal-window {
+        max-width: 300px;
+        top: 50%;
+        left: 50%;
+    }
 
+    .sign-container {
+        justify-content: center;
+        margin: 10px;
+    }
+
+    .registration-title, .authentication-title {
+        font-family: 'Locomotype';
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: baseline;
+        margin: 10px auto;
+        flex-wrap: wrap;
+        align-content: space-around;
+    }
+
+    .sign-input {
+        min-width: 65%;
+    }
+
+    article {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .events-container {
+        width: 100%;
+    }
+
+    .col {
+        min-width: 300px;
+    }
+}
