--- a/src/modules/spa/home_page/home_page_styles.css
+++ b/src/modules/spa/home_page/home_page_styles.css
@@ -14,12 +14,7 @@
 }
 
 .side-bar-title {
-    text-align: center;
-    padding: 5px 35px;
-    border: 1px solid rgba(200, 194, 188, 0.65);
-    border-radius: 15px;
-    background-color: rgba(200, 194, 188, 0.65);
-    color: #483826;
+    text-shadow: 1px 1px 2px rgba(151, 148, 171, 0.5);
 }
 
 .side-bar-span {
